<resources>
    <string name="app_name">Dictionary</string>
    <string name="txt_vietname_english_dictionary">Vietnamese English Dictionary</string>
    <string name="txt_translate_image">Translate image</string>
    <string name="txt_translate_camera">Translate camera</string>
    <string name="txt_vip_package">VIP package</string>
    <string name="txt_translate_text">Translate text</string>
    <string name="txt_recent_word">Recent words</string>
    <string name="txt_free_word_package">Free word packages</string>
    <string name="txt_account">Account</string>
    <string name="txt_your_word">Your words</string>
    <string name="txt_vietnamese">Vietnamese</string>
    <string name="txt_setting">Settings</string>
    <string name="txt_word_irregular">Irregular verbs</string>
    <string name="txt_word_toeic">TOEIC Vocabulary</string>
    <string name="txt_word_ielts">IELTS Vocabulary</string>
    <string name="txt_word_toefl">TOEFL Vocabulary</string>
    <string name="hint_translate">Input text to translate</string>
    <string name="txt_translateEV">Eng - Viet</string>
    <string name="txt_TranslateVE">Viet - Eng</string>
    <string name="txt_search_in_folder">Search in folder</string>
    <string name="txt_help_sign_up">Please sign in to backup or restore [Your Words] to your account.</string>
    <string name="txt_login_google">by Google</string>
    <string name="txt_facebook">Facebook</string>
    <string name="txt_facebook_warning_remove">Facebook login is not recommended as the facebook login function will be removed soon. Then you will not be able to restore the saved vocabulary.</string>
    <string name="txt_remind_word">Remind words</string>
    <string name="txt_remind_folder">Remind folders</string>
    <string name="txt_remind_folder_all">All folder</string>
    <string name="txt_time_in_day">Number of remind a day</string>
    <string name="txt_time_tart">Start time</string>
    <string name="txt_time_end">End time</string>
    <string name="txt_date_remind_in_week">Remind day</string>
    <string name="txt_send_comment">Send feedback for all in app</string>
    <string name="txt_sound_speed">Sound speed</string>
    <string name="txt_sound_speed_slower">Slower</string>
    <string name="txt_sound_speed_slow">Slow</string>
    <string name="txt_sound_speed_normal">Normal</string>
    <string name="txt_sound_default">Sound Default</string>
    <string name="txt_sound_uk">UK</string>
    <string name="txt_sound_us">US</string>
    <string name="txt_subscribe_vip_member">Subscribe VIP member</string>
    <string name="txt_dark_theme">Dark theme</string>
    <string name="txt_rating">Rating for us</string>
    <string name="txt_share">Share to friends</string>
    <string name="txt_infor">About app</string>
    <string name="txt_developer">Developed by QN</string>
    <string name="speech_not_supported">Speech not supported for your phone</string>
</resources>