<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg_main">

    <include layout="@layout/layout_item_header_page" />

    <ScrollView
        android:id="@+id/scr_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/header_height"
        android:background="@color/color_bg_main"
        android:fadingEdge="none"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/page_padding"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_help_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/txt_help_sign_up"
                    android:textColor="@color/text_color"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/btn_google_login"
                    android:layout_width="260dp"
                    android:layout_height="48dp"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:background="@drawable/btn_red_background"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="2dp"
                        android:padding="5dp"
                        android:src="@drawable/ic_google_plus" />

                    <TextView
                        android:id="@+id/tv_google_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:text="@string/txt_login_google"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_title"
                        android:textStyle="bold" />
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/btn_facebook_login"
                    android:layout_width="250dp"
                    android:layout_height="@dimen/btn_height_large"
                    android:layout_marginTop="200dp"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/txt_facebook"
                        android:textColor="@color/main_recent"
                        android:textSize="@dimen/text_size_title"
                        android:textStyle="bold" />
                </FrameLayout>

                <TextView
                    android:id="@+id/txtFacebookRemove"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/txt_facebook_warning_remove"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/item_des_small"
                    android:textStyle="italic" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:visibility="gone"
        />
</FrameLayout>
