<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".scenes.home.HomeActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/colorPrimary1"
        android:orientation="vertical"
        android:layout_height="@dimen/_130sdp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_height="@dimen/_40sdp">
            <TextView
                android:layout_gravity="left|center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_marginLeft="@dimen/_15sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_17sdp"/>

            <ImageView
                android:layout_gravity="right|center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding= "@dimen/_5sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:src="@mipmap/ic_launcher"/>
        </FrameLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/bg_search_word"
            android:padding="@dimen/_3sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout2">

            <ImageView
                android:id="@+id/iv_search"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_3sdp"
                android:layout_marginLeft="@dimen/_3sdp"
                android:padding="@dimen/_3sdp"
                android:src="@drawable/ic_search_file" />

            <EditText
                android:id="@+id/edtSearch"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_toLeftOf="@id/iv_micro"
                android:layout_toRightOf="@+id/iv_search"
                android:background="@android:color/transparent"
                android:focusable="true"
                android:hint="Click here to search"
                android:lines="1"
                android:textColor="#d9000000"
                android:textColorHint="#6E6969"
                android:textSize="15sp"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageView
                android:id="@+id/iv_micro"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_marginRight="@dimen/_3sdp"
                android:padding="@dimen/_2sdp"
                android:src="@drawable/ic_micro" />

            <ImageView
                android:id="@+id/iv_clear"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/_3sdp"
                android:clickable="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="@dimen/_2sdp"
                android:src="@drawable/ic_close_file"
                android:visibility="gone" />
        </RelativeLayout>
    </LinearLayout>

<ScrollView
    android:layout_width="match_parent"
    android:background="@android:color/darker_gray"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/_15sdp"
            android:onClick="onClickItemHome"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:background="@drawable/bg_item_home"
            android:clickable="true"
            android:paddingLeft="@dimen/_10sdp"
            android:layout_height="@dimen/_40sdp">
            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@mipmap/ic_launcher"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/black"
                android:text="@string/txt_vietname_english_dictionary"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/_8sdp"
            android:onClick="onClickItemHome"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:background="@drawable/bg_item_home"
            android:clickable="true"
            android:paddingLeft="@dimen/_10sdp"
            android:layout_height="@dimen/_40sdp">
            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@mipmap/ic_launcher"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/black"
                android:text="@string/txt_translate_image"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/_8sdp"
            android:onClick="onClickItemHome"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:background="@drawable/bg_item_home"
            android:clickable="true"
            android:paddingLeft="@dimen/_10sdp"
            android:layout_height="@dimen/_40sdp">
            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@mipmap/ic_launcher"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/black"
                android:text="@string/txt_translate_camera"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/_8sdp"
            android:onClick="onClickItemHome"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:background="@drawable/bg_item_home"
            android:clickable="true"
            android:paddingLeft="@dimen/_10sdp"
            android:layout_height="@dimen/_40sdp">
            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@mipmap/ic_launcher"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/black"
                android:text="@string/txt_vip_package"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/_8sdp"
            android:onClick="onClickItemHome"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:background="@drawable/bg_item_home"
            android:clickable="true"
            android:paddingLeft="@dimen/_10sdp"
            android:layout_height="@dimen/_40sdp">
            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@mipmap/ic_launcher"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/black"
                android:text="@string/txt_translate_text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_height="@dimen/_40sdp">

            <LinearLayout
                android:layout_width="@dimen/_150sdp"
                android:background="@drawable/bg_item_home"
                android:layout_height="@dimen/_40sdp"
                android:onClick="onClickItemHome"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/_10sdp"
                android:clickable="true">
                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:src="@mipmap/ic_launcher"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/black"
                    android:text="@string/txt_your_word"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:background="@drawable/bg_item_home"
                android:layout_height="@dimen/_40sdp"
                android:onClick="onClickItemHome"
                android:gravity="center_vertical"
                android:layout_marginLeft="@dimen/_7sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:clickable="true">
                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:src="@mipmap/ic_launcher"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/black"
                    android:text="@string/txt_account"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/_8sdp"
            android:onClick="onClickItemHome"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:background="@drawable/bg_item_home"
            android:clickable="true"
            android:paddingLeft="@dimen/_10sdp"
            android:layout_height="@dimen/_40sdp">
            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@mipmap/ic_launcher"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/black"
                android:text="@string/txt_recent_word"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/_8sdp"
            android:onClick="onClickItemHome"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:background="@drawable/bg_item_home"
            android:clickable="true"
            android:paddingLeft="@dimen/_10sdp"
            android:layout_height="@dimen/_40sdp">
            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@mipmap/ic_launcher"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/black"
                android:text="@string/txt_free_word_package"/>
        </LinearLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>

</LinearLayout>